# ha_wind_power

./: .gitignore  README.md  app.py  hacs.json  power.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: hacs.yml  hassfest.yml  lint.yml  security.yml  tests.yml
custom_components/whatif_wind/: __init__.py  config_flow.py  const.py  coordinator.py  influx.py  manifest.json  power.py  sensor.py  statistics.py  strings.json  turbines.py
custom_components/whatif_wind/translations/: en.json  it.json
custom_components/wind_power/: __init__.py  config_flow.py  const.py  coordinator.py  influx.py  manifest.json  power.py  sensor.py  statistics.py  strings.json  turbines.py
custom_components/wind_power/translations/: it.json
docs/: REQUISITI.md
tests/: conftest.py  test_influx.py  test_power.py  test_statistics.py  test_translation_consistency.py  test_turbines.py
